--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = susmitabhowmik
-	email = susmita.bhowmik516@gmail.com
+	email = susmita@heysparkbox.com
 
 #Template for git commit message
 [commit]
